--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -323,7 +323,7 @@
 </td></tr></tbody></table>
 <p><span id="OpenCascade_navigation"></span>
 </p>
-<h3><span class="mw-headline" id="OpenCascade_navigace">OpenCascade navigace</span></h3>
+<h3><span class="mw-headline" id="Navigace_OpenCascade">Navigace OpenCascade</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The OpenCascade navigation style was modeled after <a rel="nofollow" class="external text" href="https://www.opencascade.com/">OpenCascade</a>.
 </p>
@@ -1074,12 +1074,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111203025
+Cached time: 20260111203111
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.313 seconds
-Real time usage: 0.509 seconds
+CPU time usage: 0.314 seconds
+Real time usage: 0.384 seconds
 Preprocessor visited node count: 1578/1000000
 Post&#8208;expand include size: 77275/2097152 bytes
 Template argument size: 29506/2097152 bytes
@@ -1090,19 +1090,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   65.500      1 -total
- 14.75%    9.660      8 Template:ASCII
-  8.74%    5.725      1 Template:Blender_Navigation
-  7.26%    4.757      1 Template:Userdocnavi/cs
-  5.95%    3.896      1 Template:CAD_Navigation
-  5.83%    3.820     70 Template:KEY
-  5.63%    3.688      1 Template:OpenSCAD_Navigation
-  5.04%    3.304      1 Template:Inventor_Navigation/cs
-  4.73%    3.097      1 Template:SolidWorks_Navigation
-  4.44%    2.907      2 Template:OpenInventor_Navigation
+100.00%   67.935      1 -total
+ 13.09%    8.893      8 Template:ASCII
+  8.37%    5.689      1 Template:Userdocnavi/cs
+  7.88%    5.351      1 Template:OpenSCAD_Navigation
+  5.64%    3.834     70 Template:KEY
+  5.63%    3.822      1 Template:Touchpad_Navigation/cs
+  5.59%    3.798      1 Template:Blender_Navigation
+  5.41%    3.672      1 Template:OpenCascade_Navigation
+  4.85%    3.297      1 Template:VersionMinus
+  4.57%    3.108      1 Template:TinkerCAD_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111203024 and revision id 1736075. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111203110 and revision id 1736077. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
