--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -55,7 +55,7 @@
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> + <span typeof="mw:File"><a href="../index.php?title=Ascii_017.svg&amp;filetimestamp=20191120135508&amp;.html" class="mw-file-description"><img src="../File/Ascii_017.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> a <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> + <span typeof="mw:File"><a href="../index.php?title=Ascii_016.svg&amp;filetimestamp=20191120135444&amp;.html" class="mw-file-description"><img src="../File/Ascii_016.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> pro oto&#269;en&iacute; zobrazen&iacute; o 90 stup&#328;&#367;.</li></ul>
 <p><span id="Blender_navigation"></span>
 </p>
-<h3><span class="mw-headline" id="Blender_navigace">Blender navigace</span></h3>
+<h3><span class="mw-headline" id="Navigace_Blender">Navigace Blender</span></h3>
 <p>Styl navigace Blenderu byl vytvo&#345;en podle <a rel="nofollow" class="external text" href="https://www.blender.org">Blenderu</a>.
 </p>
 <table class="mousemodel" style="border-style:solid; border-width:1px; border-color:#aaaaaa; padding:1px; border-spacing:18px 0px; width:100%;">
@@ -1074,12 +1074,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111203111
+Cached time: 20260111203151
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.314 seconds
-Real time usage: 0.384 seconds
+CPU time usage: 0.307 seconds
+Real time usage: 0.406 seconds
 Preprocessor visited node count: 1578/1000000
 Post&#8208;expand include size: 77275/2097152 bytes
 Template argument size: 29506/2097152 bytes
@@ -1090,19 +1090,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   67.935      1 -total
- 13.09%    8.893      8 Template:ASCII
-  8.37%    5.689      1 Template:Userdocnavi/cs
-  7.88%    5.351      1 Template:OpenSCAD_Navigation
-  5.64%    3.834     70 Template:KEY
-  5.63%    3.822      1 Template:Touchpad_Navigation/cs
-  5.59%    3.798      1 Template:Blender_Navigation
-  5.41%    3.672      1 Template:OpenCascade_Navigation
-  4.85%    3.297      1 Template:VersionMinus
-  4.57%    3.108      1 Template:TinkerCAD_Navigation
+100.00%   67.687      1 -total
+ 11.81%    7.991      8 Template:ASCII
+ 11.67%    7.902      1 Template:Userdocnavi/cs
+  6.07%    4.108      1 Template:SolidWorks_Navigation
+  5.62%    3.807     70 Template:KEY
+  4.86%    3.290      1 Template:MayaGesture_Navigation
+  4.55%    3.079      1 Template:OpenSCAD_Navigation
+  4.49%    3.040      1 Template:Navigation_menu_2
+  4.42%    2.991      1 Template:TOCright
+  4.37%    2.960      1 Template:Gesture_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111203110 and revision id 1736077. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111203151 and revision id 1736079. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
