--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -105,7 +105,7 @@
 </td></tr></tbody></table>
 <p><span id="CAD_navigation"></span>
 </p>
-<h3><span class="mw-headline" id="CAD_navigace">CAD navigace</span></h3>
+<h3><span class="mw-headline" id="Navigace_CAD">Navigace CAD</span></h3>
 <p>Toto je v&yacute;choz&iacute; styl navigace. Umo&#382;&#328;uje u&#382;ivateli jednoduch&eacute; ovl&aacute;d&aacute;n&iacute; zobrazen&iacute; a nevy&#382;aduje pou&#382;it&iacute; kl&aacute;ves na kl&aacute;vesnici, s v&yacute;jimkou v&yacute;b&#283;ru v&iacute;ce polo&#382;ek.
 </p>
 <table class="mousemodel" style="border-style:solid; border-width:1px; border-color:#aaaaaa; padding:1px; border-spacing:18px 0px; width:100%;">
@@ -1074,12 +1074,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111203151
+Cached time: 20260111203215
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.307 seconds
-Real time usage: 0.406 seconds
+CPU time usage: 0.316 seconds
+Real time usage: 0.472 seconds
 Preprocessor visited node count: 1578/1000000
 Post&#8208;expand include size: 77275/2097152 bytes
 Template argument size: 29506/2097152 bytes
@@ -1090,19 +1090,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   67.687      1 -total
- 11.81%    7.991      8 Template:ASCII
- 11.67%    7.902      1 Template:Userdocnavi/cs
-  6.07%    4.108      1 Template:SolidWorks_Navigation
-  5.62%    3.807     70 Template:KEY
-  4.86%    3.290      1 Template:MayaGesture_Navigation
-  4.55%    3.079      1 Template:OpenSCAD_Navigation
-  4.49%    3.040      1 Template:Navigation_menu_2
-  4.42%    2.991      1 Template:TOCright
-  4.37%    2.960      1 Template:Gesture_Navigation
+100.00%   91.681      1 -total
+ 12.77%   11.707      8 Template:ASCII
+ 11.65%   10.680     70 Template:KEY
+ 10.98%   10.063      1 Template:Gesture_Navigation
+  7.62%    6.983      1 Template:Userdocnavi/cs
+  5.72%    5.246      2 Template:Button
+  5.39%    4.939      1 Template:Inventor_Navigation/cs
+  4.97%    4.558      1 Template:MayaGesture_Navigation
+  4.91%    4.504      1 Template:OpenSCAD_Navigation
+  4.91%    4.504      2 Template:OpenInventor_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111203151 and revision id 1736079. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111203215 and revision id 1736081. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
