--- a/wiki/de/TechDraw_CosmeticVertex.html
+++ b/wiki/de/TechDraw_CosmeticVertex.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw CosmeticVertex/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+CosmeticVertex&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_CosmeticVertex.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw CosmeticVertex (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_CosmeticVertex.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Sommet cosm&eacute;tique (69% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_CosmeticVertex.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Vertice cosmetico (69% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -82,11 +82,8 @@
 </p>
 <h2><span class="mw-headline" id="Skripten">Skripten</span></h2>
 <p>Siehe auch: <a rel="nofollow" class="external text" href="https://freecad.github.io/SourceDoc/">Autogenerierte API-Dokumentation</a> und <a href="../de/FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics/de">Grundlagen der Skripterstellung in FreeCAD</a>.
+</p><p>Hilfspunkte stehen in <a href="../de/Macros.html" title="Macros/de">Makros</a> oder der <a href="../de/Python_Console.html" title="Python Console/de">Python-Konsole</a> zur Verf&uuml;gung. 
 </p>
-<div class="mw-translate-fuzzy">
-<p>Hilfspunkte stehen in <a href="../de/Macros.html" title="Macros/de">Makros</a> oder der <a href="../de/Python.html" title="Python/de">Python</a>-Konsole zur Verf&uuml;gung.
-</p>
-</div> 
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">dvp</span> <span class="o">=</span> <span class="n">App</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">View</span>
 <span class="n">org</span> <span class="o">=</span> <span class="n">App</span><span class="o">.</span><span class="n">Vector</span><span class="p">(</span><span class="mf">0.0</span><span class="p">,</span> <span class="mf">0.0</span><span class="p">,</span> <span class="mf">0.0</span><span class="p">)</span>
 <span class="n">dvp</span><span class="o">.</span><span class="n">makeCosmeticVertex</span><span class="p">(</span><span class="n">org</span><span class="p">);</span>
@@ -143,35 +140,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111202658
+Cached time: 20260111203339
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.110 seconds
-Preprocessor visited node count: 339/1000000
+CPU time usage: 0.073 seconds
+Real time usage: 0.103 seconds
+Preprocessor visited node count: 338/1000000
 Post&#8208;expand include size: 28332/2097152 bytes
 Template argument size: 11171/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4008/5000000 bytes
+Unstrip post&#8208;expand size: 4012/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.456      1 -total
- 32.58%    7.641      1 Template:TechDraw_Tools_navi/de
- 23.08%    5.414      1 Template:GuiCommand/de
- 14.23%    3.337      2 Template:Navigation_menu_2
-  9.82%    2.303      2 Template:Docnav/de
-  9.52%    2.233      1 Template:Userdocnavi/de
-  6.60%    1.548      1 Template:Code
-  6.27%    1.471      1 Template:Caption
-  4.75%    1.113      4 Template:Button
-  4.38%    1.027      1 Template:MenuCommand
+100.00%   19.095      1 -total
+ 36.65%    6.998      1 Template:TechDraw_Tools_navi/de
+ 20.66%    3.945      2 Template:Navigation_menu_2
+ 13.34%    2.547      1 Template:GuiCommand/de
+ 11.05%    2.110      2 Template:Docnav/de
+  9.24%    1.765      1 Template:Userdocnavi/de
+  8.16%    1.558      1 Template:Code
+  6.49%    1.240      1 Template:Caption
+  6.27%    1.196      4 Template:Button
+  5.30%    1.012      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177740-0!canonical and timestamp 20260111202657 and revision id 1736055. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177740-0!canonical and timestamp 20260111203339 and revision id 1736083. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
