--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -324,10 +324,8 @@
 <p><span id="OpenCascade_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="Navigace_OpenCascade">Navigace OpenCascade</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The OpenCascade navigation style was modeled after <a rel="nofollow" class="external text" href="https://www.opencascade.com/">OpenCascade</a>.
+<p>Styl navigace OpenCascade byl vytvo&#345;en podle vzoru <a rel="nofollow" class="external text" href="https://www.opencascade.com/">OpenCascade</a>.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="mousemodel" style="border-style:solid; border-width:1px; border-color:#aaaaaa; padding:1px; border-spacing:18px 0px; width:100%;">
 <tbody><tr>
@@ -1074,13 +1072,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111203215
+Cached time: 20260111203346
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.316 seconds
-Real time usage: 0.472 seconds
-Preprocessor visited node count: 1578/1000000
+CPU time usage: 0.313 seconds
+Real time usage: 0.613 seconds
+Preprocessor visited node count: 1577/1000000
 Post&#8208;expand include size: 77275/2097152 bytes
 Template argument size: 29506/2097152 bytes
 Highest expansion depth: 7/100
@@ -1090,19 +1088,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   91.681      1 -total
- 12.77%   11.707      8 Template:ASCII
- 11.65%   10.680     70 Template:KEY
- 10.98%   10.063      1 Template:Gesture_Navigation
-  7.62%    6.983      1 Template:Userdocnavi/cs
-  5.72%    5.246      2 Template:Button
-  5.39%    4.939      1 Template:Inventor_Navigation/cs
-  4.97%    4.558      1 Template:MayaGesture_Navigation
-  4.91%    4.504      1 Template:OpenSCAD_Navigation
-  4.91%    4.504      2 Template:OpenInventor_Navigation
+100.00%  122.801      1 -total
+ 14.29%   17.546      1 Template:Blender_Navigation
+ 10.52%   12.913      1 Template:Userdocnavi/cs
+  8.28%   10.174      1 Template:OpenSCAD_Navigation
+  7.04%    8.649      8 Template:ASCII
+  6.59%    8.095      1 Template:Gesture_Navigation
+  4.51%    5.542      1 Template:TinkerCAD_Navigation
+  4.36%    5.356      1 Template:Touchpad_Navigation/cs
+  3.97%    4.870      2 Template:OpenInventor_Navigation
+  3.96%    4.859      1 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111203215 and revision id 1736081. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111203346 and revision id 1736085. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
