--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -49,7 +49,7 @@
 <p><span id="Page"></span>
 </p>
 <h3><span class="mw-headline" id="Zeichnungsblatt">Zeichnungsblatt</span></h3>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_PageDefault.svg&amp;filetimestamp=20240710132501&amp;.html" class="mw-file-description"><img src="../File/TechDraw_PageDefault.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_PageDefault.html" title="TechDraw PageDefault/de">Neues Zeichnungsblatt aus der Standardvorlage erstellen</a>: F&uuml;gt ein neues Zeichnungsblatt unter Verwendung der voreingestellten <a href="../TechDraw_Templates.html" title="TechDraw Templates">Vorlage</a> hinzu.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_PageDefault.svg&amp;filetimestamp=20240710132501&amp;.html" class="mw-file-description"><img src="../File/TechDraw_PageDefault.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_PageDefault.html" title="TechDraw PageDefault/de">Neues Zeichnungsblatt</a>: F&uuml;gt ein neues Zeichnungsblatt unter Verwendung der voreingestellten <a href="../de/TechDraw_Templates.html" title="TechDraw Templates/de">Vorlage</a> hinzu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_PageTemplate.svg&amp;filetimestamp=20241127175340&amp;.html" class="mw-file-description"><img src="../File/TechDraw_PageTemplate.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_PageTemplate.html" title="TechDraw PageTemplate/de">Neues Zeichnungsblatt aus einer Vorlage erstellen</a>: F&uuml;gt ein neues Zeichnungsblatt unter Verwendung einer frei w&auml;hlbaren <a href="../de/TechDraw_Templates.html" title="TechDraw Templates/de">Vorlage</a> hinzu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_FillTemplateFields.svg&amp;filetimestamp=20240708195027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FillTemplateFields.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_FillTemplateFields.html" title="TechDraw FillTemplateFields/de">Vorlagenfelder aktualisieren</a>: F&uuml;llt Vorlagenfelder automatisch mit Dokumentinformtionen <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_RedrawPage.svg&amp;filetimestamp=20240710133133&amp;.html" class="mw-file-description"><img src="../File/TechDraw_RedrawPage.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_RedrawPage.html" title="TechDraw RedrawPage/de">Seite neu zeichnen</a>: Erzwingt eine Aktualisierung des ausgew&auml;hlten Zeichnungsblattes.</li></ul>
@@ -291,12 +291,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111202909
+Cached time: 20260111204207
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.283 seconds
-Real time usage: 0.408 seconds
+CPU time usage: 0.281 seconds
+Real time usage: 0.372 seconds
 Preprocessor visited node count: 870/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
@@ -307,18 +307,18 @@ Unstrip post&#8208;expand size: 4462/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.389      1 -total
- 29.62%    6.632      1 Template:TechDraw_Tools_navi/de
- 16.90%    3.784      2 Template:Docnav/de
- 14.75%    3.302      2 Template:Navigation_menu_2
- 12.93%    2.894     25 Template:Version/de
-  9.20%    2.060      1 Template:Userdocnavi/de
-  9.09%    2.035      5 Template:VersionPlus/de
-  7.69%    1.722      1 Template:TOCright
-  4.63%    1.036      1 Template:KEY
+100.00%   25.302      1 -total
+ 29.82%    7.545      1 Template:TechDraw_Tools_navi/de
+ 15.19%    3.844      2 Template:Navigation_menu_2
+ 13.99%    3.539      5 Template:VersionPlus/de
+ 12.62%    3.192      2 Template:Docnav/de
+ 11.37%    2.878      1 Template:Userdocnavi/de
+ 10.88%    2.752     25 Template:Version/de
+  6.42%    1.625      1 Template:TOCright
+  4.51%    1.140      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111202909 and revision id 1736069. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111204206 and revision id 1736113. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
