--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -379,19 +379,16 @@
 <p>Navigace OpenInventor (d&#345;&iacute;ve Inventor) byl vytvo&#345;en podle vzoru <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_Inventor">Open Inventoru</a>. Chcete-li vybrat objekty, mus&iacute;te podr&#382;et kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> nebo <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>.
 </p><p>Tento styl nen&iacute; zalo&#382;en na programu Autodesk Inventor.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="mousemodel" style="border-style:solid; border-width:1px; border-color:#aaaaaa; padding:1px; border-spacing:18px 0px; width:100%;">
 <tbody><tr>
-<th style="width:25%; background: #ededff; padding:2px 2px;">Select
+<th style="width:25%; background: #ededff; padding:2px 2px;">V&yacute;b&#283;r
 </th>
 <th colspan="2" style="width:25%; background: #ededff; padding:2px 2px;">Zoom
 </th>
-<th style="width:25%; background: #ededff; padding:2px 2px;">Rotate view
+<th style="width:25%; background: #ededff; padding:2px 2px;">Rotace pohledu
 </th>
-<th style="width:25%; background: #ededff; padding:2px 2px;">Pan
-
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></th></tr>
+<th style="width:25%; background: #ededff; padding:2px 2px;">Posun pohledu
+</th></tr>
 <tr style="text-align:center;">
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Hand_cursor.png&amp;filetimestamp=20240917104542&amp;.html" class="mw-file-description"><img src="../File/Hand_cursor.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="24" data-file-height="24"></a></span>
 </td>
@@ -403,7 +400,6 @@
 </td></tr>
 <tr style="text-align:center;">
 <td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB.svg&amp;filetimestamp=20181210182920&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </div></td>
 <td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_rotate.svg&amp;filetimestamp=20181210192821&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_rotate.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
@@ -441,7 +437,7 @@
 </div></td>
 <td>Hold the middle mouse button, then move the pointer.
 </td></tr></tbody></table>
-</div>
+
 <p><span id="OpenSCAD_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="OpenSCAD_navigace">OpenSCAD navigace</span></h3>
@@ -968,15 +964,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111204102
+Cached time: 20260111204249
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.364 seconds
-Real time usage: 0.652 seconds
-Preprocessor visited node count: 1525/1000000
-Post&#8208;expand include size: 73516/2097152 bytes
-Template argument size: 28451/2097152 bytes
+CPU time usage: 0.276 seconds
+Real time usage: 0.358 seconds
+Preprocessor visited node count: 1523/1000000
+Post&#8208;expand include size: 73466/2097152 bytes
+Template argument size: 28401/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -984,19 +980,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  171.989      1 -total
- 17.27%   29.709      2 Template:Button
-  9.67%   16.627      1 Template:Userdocnavi/cs
-  9.18%   15.782      2 Template:Version
-  7.95%   13.672      8 Template:ASCII
-  6.21%   10.678      1 Template:Touchpad_Navigation
-  5.59%    9.618     69 Template:KEY
-  4.75%    8.162      9 Template:MenuCommand
-  4.38%    7.539      1 Template:OpenInventor_Navigation
-  4.34%    7.468      1 Template:Navigation_menu_2
+100.00%   59.070      1 -total
+ 13.15%    7.769      8 Template:ASCII
+  8.88%    5.245      1 Template:Userdocnavi/cs
+  6.24%    3.688      1 Template:CAD_Navigation
+  5.67%    3.349     69 Template:KEY
+  5.13%    3.028      1 Template:Gesture_Navigation
+  4.96%    2.929      1 Template:Touchpad_Navigation/cs
+  4.79%    2.830      1 Template:OpenSCAD_Navigation
+  4.60%    2.720      1 Template:SolidWorks_Navigation
+  4.24%    2.504      1 Template:Touchpad_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204102 and revision id 1736107. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204249 and revision id 1736117. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
